--- a/TODO
+++ b/TODO
@@ -28,3 +28,9 @@ bonus [LOW]
 ** accept activity/competition [LOW]
  - assign location
  - assign time/date/opening hours
+
+
+* promote admin
+
+* view owned tickets
+* strings
