Mobile CSS & long menu support

--- a/TODO
+++ b/TODO
@@ -2,16 +2,16 @@ HIGH
 * Move payment to live credentials!!
 * Display teams/activities/vendors/artistalley
 * email team members
-* scrollable menu
+* list all tickets
 
 
 
 MEDIUM
-* Mobile CSS
 * transfer tickets
 * update missing strings
 * forgot password
 * view whole budget
+* pay+register on-site ui
 
 
 
