--- a/TODO
+++ b/TODO
@@ -1,10 +1,11 @@
 HIGH
 * forgot password
-* transfer tickets
-
+* transfer tickets & update ticket page
+* switch default enter behavior in tasks to ok/yes or noOp
 
 MEDIUM
 * view whole budget + team/act/vendor/aa purchase needs
+* cleanup old sessions
 
 
 LOW
