--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@ HIGH
 * forgot password
 * transfer tickets & update ticket page
 * switch default enter behavior in tasks to ok/yes or noOp
+* auto-redirect http -> https
+
 
 MEDIUM
 * view whole budget + team/act/vendor/aa purchase needs
@@ -17,16 +19,17 @@ LOW
 LOWEST
 * achievement ui notification
 * list achivements
+* pay+register on-site ui
+* Remove team/activity/etc
+* add/remove managers for teams
+* Remove team members
 
 
 AFTER NEW YEAR
 * manage points
 * trade in points for things
 * Update teams/activities/vendors/artistalley layout to make it more pretty
-* pay+register on-site ui
 
-* Remove team/activity/etc
-* add/remove managers for teams
 
 DESCOPED 
 * set current event (reason: always use latest. Fuck history :v)
