--- a/TODO
+++ b/TODO
@@ -14,6 +14,8 @@ LOW
 * Remove team members
 * add/remove managers for teams
 
+* kai.kodachi.se autoredirectar till https. fuck chrome. -__-
+
 
 LOWEST
 
