--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 
 HIGH
+* email strings
+* edit team/vendor/act/aa page
 * forgot password
 * transfer tickets & update ticket page
 
@@ -17,6 +19,8 @@ LOW
 
 
 LOWEST
+
+* adminlista för alla team osv
 
 * pay+register on-site ui
 
