--- a/TODO
+++ b/TODO
@@ -1,13 +1,13 @@
 
 HIGH
-* email strings
+content
 * edit team/vendor/act/aa page
 * forgot password
 * transfer tickets & update ticket page
 
+bugs
+* email strings
 * account create not finding duplicate ssn accounts
-
-* /list/ react/server adress overlap causes site traversal issues for new users
 
 
 MEDIUM
